# Coink

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md
exemples/: cloth_sim.cpp
exemples/verlet_cloth_simulation/: verlet_cloth_sim.cpp  verlet_cloth_sim.h
src/: #main.cpp#  main.cpp  verlet_cloth_sim.cpp  verlet_cloth_sim.h
src/engine/: engine.cpp  engine.h  types.h
src/engine/gui/: gui.cpp  gui.h
src/engine/gui/button/: button.cpp  button.h
src/engine/media_manager/: media_manager.cpp  media_manager.h
src/engine/media_manager/animation/: animation.cpp  animation.h
src/engine/media_manager/texture/: texture.h
src/engine/particle/: particle.cpp  particle.h
src/engine/physics/: physics.cpp  physics.h
src/engine/physics/physics_body/: physics_body.cpp  physics_body.h
src/engine/physics/verlet_body/: verlet_body.cpp  verlet_body.h
src/engine/physics/verlet_stick/: verlet_stick.cpp  verlet_stick.h
src/engine/render/: render.cpp  render.h
src/engine/time/: time.cpp  time.h
